chore: commint lint added

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/HenriqueOliveiraFerraz/ProEventosAPI#readme",
   "devDependencies": {
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^12.4.1"
   }
