--- a/ProEventos.API/Properties/launchSettings.json
+++ b/ProEventos.API/Properties/launchSettings.json
@@ -12,8 +12,10 @@
     "ProEventos.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchBrowser": false,
+      "launchUrl": "api/evento",
+      "commandLineArgs": "watch --project ProEventos.API run",
+      "hotReloadEnabled": true,
       "applicationUrl": "https://localhost:7028;http://localhost:5028",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
